--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="src/App.js"></script>
+    <script type="text/babel" src="src/App.js"></script>
   </body>
 </html>
