--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/App.css" />
     <title>Weather</title>
   </head>
   <body>
